added improved_notebook which includes improvements from yesterday prior to meeting

--- a/notebooks/Improved_Notebook.ipynb
+++ b/notebooks/Improved_Notebook.ipynb
@@ -318,7 +318,7 @@
         "id": "SkX36nFomywI",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 821
         },
         "outputId": "4d6edfb4-793d-460c-d1b2-8a7fc4d460fe"
       },
@@ -687,7 +687,7 @@
         "\n",
         "# create train (x,y,sdf) and test (x,y,x_v,y_v) sets and save them\n",
         "train_simulation_tensors = [all_simulation_tensors[i][:, :3] for i in train_indices]\n",
-        "test_simulation_tensors = [all_simulation_tensors[i][:, [0, 1, -2, -1]] for i in test_indices]"
+        "test_simulation_tensors = [all_simulation_tensors[i] for i in test_indices]"
       ],
       "metadata": {
         "id": "alpk7YDkYb_I"
@@ -1113,7 +1113,7 @@
         "id": "cHk-Rx4JPO1x",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 633
+          "height": 492
         },
         "outputId": "e14881fa-6bb4-4f83-db87-1c8e23bbf88c"
       },
@@ -1212,7 +1212,7 @@
         "id": "f3QNHEi861Ul",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 331
+          "height": 192
         },
         "outputId": "9bbba0dd-751d-4fe7-ac46-276397ca5486"
       },
